--- a/fragments/info.html
+++ b/fragments/info.html
@@ -1,6 +1,4 @@
 	    <div class="col-xs-4">
-	    	<div class="">
-      			<div>
         			<table class="table bordered striped">
         				<caption>PERSONAL</caption>
 				        <tr>
@@ -134,6 +132,5 @@
 				        <tr>
 				        </tr>
 			        </table>
-      			</div>
-    		</div>
+			        <div id="heightmarker" class="heightmarker"></div>
 	  	</div>
