--- a/fragments/info.html
+++ b/fragments/info.html
@@ -23,7 +23,7 @@
 				        	<td class="col-xs-1 text-center">
 				        		<i class="fa fa-map-marker" aria-hidden="true"></i>
 				        	</td>
-				            <td class="col-xs-3">Hno 1-3 Uppal Hyderabad 93</td>
+				        	<td class="col-xs-3">Hno 1-3 Uppal Hyderabad 93</td>
 				        </tr>
 
 
@@ -132,5 +132,5 @@
 				        <tr>
 				        </tr>
 			        </table>
-			        <div id="heightmarker" class="heightmarker"></div>
+			        <div id="heightmarker1" class="heightmarker"></div>
 	  	</div>
