Adding form for resume step 1.

--- a/fragments/info.html
+++ b/fragments/info.html
@@ -1,3 +1,16 @@
+<div>
+
+		<div class="col-xs-9">
+			<H2>Luv  SINGH <small><br>Linux  and Web full stack developer</small></H2>
+		</div>
+		<div class="col-xs-3 blueback">
+		</div>
+
+		<div class="col-xs-9" style="height:20px;">
+		</div>
+		<div class="col-xs-3 blueback" style="height:20px;">
+		</div>
+
 	    <div class="col-xs-4">
         			<table class="table bordered striped">
         				<caption>PERSONAL</caption>
@@ -134,3 +147,4 @@
 			        </table>
 			        <div id="heightmarker1" class="heightmarker"></div>
 	  	</div>
+</div>	  	
