Fixes states for form and view

--- a/fragments/info.html
+++ b/fragments/info.html
@@ -1,7 +1,7 @@
 <div>
 
 		<div class="col-xs-9">
-			<H2>Luv  SINGH <small><br>Linux  and Web full stack developer</small></H2>
+			<H2>{{cv.name}}<small><br>{{cv.summary}}</small></H2>
 		</div>
 		<div class="col-xs-3 blueback">
 		</div>
