--- a/fragments/resume.html
+++ b/fragments/resume.html
@@ -1,4 +1,5 @@
 <div>
+	{{$stateParams | json}}
 	<div ng-include="'fragments/info.html'"></div>
 	<div ng-include="'fragments/timeline.html'"></div>
 	<div ng-include="'fragments/cover.html'"></div>
