--- a/fragments/info.html
+++ b/fragments/info.html
@@ -18,25 +18,25 @@
 				        	<td class="col-xs-1 text-center">
 								<i class="fa fa-phone-square" aria-hidden="true"></i>
 				        	</td>
-				            <td class="col-xs-3">+91 9032329020</td>
+				            <td class="col-xs-3">{{cv.phone}}</td>
 				        </tr>
 				        <tr>
 				        	<td class="col-xs-1 text-center">
 								<i class="fa fa-envelope" aria-hidden="true"></i>
 				        	</td>
-				            <td class="col-xs-3">luv.singht@gmail.com</td>
+				            <td class="col-xs-3">{{cv.email}}</td>
 				        </tr>
 				        <tr>
 				        	<td class="col-xs-1 text-center">
 								<i class="fa fa-language" aria-hidden="true"></i>
 				        	</td>
-				            <td class="col-xs-3">English French Hindi</td>
+				            <td class="col-xs-3">{{cv.languages}}</td>
 				        </tr>
 				        <tr>
 				        	<td class="col-xs-1 text-center">
 				        		<i class="fa fa-map-marker" aria-hidden="true"></i>
 				        	</td>
-				        	<td class="col-xs-3">Hno 1-3 Uppal Hyderabad 93</td>
+				        	<td class="col-xs-3">{{cv.address}}</td>
 				        </tr>
 
 
@@ -44,15 +44,14 @@
 				        	<td class="col-xs-1 text-center">
 				        		<i class="fa fa-linkedin-square"></i>
 				        	</td>
-				        		<td class="col-xs-3"> http://in.linkedin.com/in/luvsinght</td>
+				        		<td class="col-xs-3">{{cv.linkedin}}</td>
 				        </tr>
 				        <tr>
 				        	<td class="col-xs-1 text-center">
 				        		<i class="fa fa-github"  aria-hidden="true"></i>
 				        	</td>
-				        		<td class="col-xs-3"> http://github.com/capaximperii</td>
+				        		<td class="col-xs-3">{{cv.github}}</td>
 				        </tr>
-
 			        </table>
 
 			        <!-- Work experience -->
@@ -62,75 +61,37 @@
 				        	<td class="col-xs-1 text-center">
 				        		Total
 				        	</td>
-				            <td class="col-xs-3">6 years</td>
+				            <td class="col-xs-3">{{cv.experience}}</td>
 				        </tr>
 				        <tr>
 				        	<td class="col-xs-1 text-center">
 				        		Currently
 				        	</td>
-				            <td class="col-xs-3"> Team Lead</td>
+				            <td class="col-xs-3">{{cv.designation}}</td>
 				        </tr>
 			        </table>
 					<!-- Education -->
 					<table class="table bordered striped">
         			<caption class="info">EDUCATION</caption>
-				        <tr>
+				        <tr ng-repeat="d in cv.education">
 				        	<td class="col-xs-1 text-center">
-				        		Masters
+				        		{{d.degree}}
 				        	</td>
-				            <td class="col-xs-3"> EPITA (IONIS), Paris</td>
+				            <td class="col-xs-3">
+				            	{{d.university}}
+				            </td>
 				        </tr>
-				        <tr>
-				        	<td class="col-xs-1 text-center">
-				        		BE
-				        	</td>
-				            <td class="col-xs-3"> Pune University, Pune</td>
-				        </tr>
-
 			        </table>
 
         			<table class="">
         				<caption>SKILLS</caption>
-				        <tr>
+				        <tr ng-repeat="s in cv.skills">
 				        	<td class="col-xs-1 text-center skilltable">
-				        		Python
+				        		{{s.skill}}
 				        	</td>
 				            <td class="col-xs-3 skilltable">
 				            	 <div class="progress">
-									<div class="progress-bar" role="progressbar" style="width:100%">
-									</div>
-								</div>
-				            </td>
-				        </tr>
-				        <tr>
-				        	<td class="col-xs-1 text-center skilltable">
-				        	 	C, C++
-				        	</td>
-				            <td class="col-xs-3 skilltable">
-				            	 <div class="progress">
-									<div class="progress-bar" role="progressbar" style="width:100%">
-									</div>
-								</div>
-				            </td>
-				        </tr>
-				        <tr>
-				        	<td class="col-xs-1 text-center skilltable">
-				        		Java
-				        	</td>
-				            <td class="col-xs-3 skilltable">
-				            	 <div class="progress">
-									<div class="progress-bar" role="progressbar" style="width:80%">
-									</div>
-								</div>
-				            </td>
-				        </tr>
-				        <tr>
-				        	<td class="col-xs-1 text-center">
-				        		Javascript
-				        	</td>
-				            <td class="col-xs-3">
-				            	 <div class="progress">
-									<div class="progress-bar" role="progressbar"style="width:70%">
+									<div class="progress-bar" role="progressbar" ng-style="{width: s.proficiency + '%'}">
 									</div>
 								</div>
 				            </td>
@@ -139,9 +100,8 @@
 				        		<i class="fa fa-ellipsis-h" aria-hidden="true"></i>
 				        	</td>
 				        	<td class="col-xs-3">
-				        		<kbd>AngularJs</kbd><kbd>SQL</kbd><kbd> Bash</kbd> <kbd>HTML5</kbd>
+				        		<kbd ng-repeat="s in cv.extraskills">{{s.skill}}</kbd>
 				            </td>
-
 				        <tr>
 				        </tr>
 			        </table>
