--- a/fragments/info.html
+++ b/fragments/info.html
@@ -100,7 +100,7 @@
 				        		<i class="fa fa-ellipsis-h" aria-hidden="true"></i>
 				        	</td>
 				        	<td class="col-xs-3">
-				        		<kbd ng-repeat="s in cv.extraskills">{{s}}</kbd>
+				        		<span ng-repeat="s in cv.extraskills" class="badge">{{s}}</span>
 				            </td>
 				        <tr>
 				        </tr>
