--- a/fragments/cover.html
+++ b/fragments/cover.html
@@ -1,23 +1,18 @@
     <div class="col-xs-3 blueback" id="fullpage">
         <H3><small>ABOUT ME</small></H3>
-        <p>With over 7 years of experience in different domains across organisations that are world leaders, I have recently upgraded my skill as a full stack web developer to add to my experience as an embedded Linux Engineer. I am looking for new opportunities and the areas of keen interest are machine learning, Internet of Things, AI.</p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <p>{{cv.aboutme}}</p>
+
+        <div class="blueback" style="height:50px;">
+        </div>
+
         <H3><small>REFERENCES</small></H3>
-        <B>Randall Fields<B>
-		<B>Project manager at Qualcomm</B>
-        <p>some number</p>
-        <B>Ravi Dhanshetty<B>
-			<B>Team Lead at Dell</B>
-        <p>some number</p>
-    </div>
+        <div class="list-group" ng-repeat="r in cv.references" style="top:0; bottom:0;">
+          <div class="list-group-item blueback">
+            <h4 class="list-group-item-heading">{{r.name}}</h4>
+            <strong class="list-group-item-heading">{{r.company + ', ' + r.position }}</strong>
+            <p class="list-group-item-text"><i class="fa fa-envelope" aria-hidden="true"></i>
+                {{r.email}}
+            </p>
+          </div>
+        </div>
+</div>
