--- a/css/custom.css
+++ b/css/custom.css
@@ -25,12 +25,6 @@
 	height: 30px;
 }
 
-kbd {
-	padding: 2px;
-	font-size: 90%;
-	color: #fff;
-	background-color: #333;
-	border-radius: 5px;
-	-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.25);
-	box-shadow: inset 0 -1px 0 rgba(0,0,0,.25);
+.interest {
+	padding-left: 30px;
 }
