--- a/fragments/form.html
+++ b/fragments/form.html
@@ -117,10 +117,26 @@
             </div>
         </div>
 
+        <label>Interests / Extra curricular</label>
+        <ul>
+            <li ng-repeat="s in cv.interests">{{s}}</li>
+        </ul>
+        <div class="container">
+            <div class="col-sm-8">
+                <input class="form-control" placeholder="Interests" type="text" ng-model="interest">
+            </div>
+            <div class="col-sm-4">
+                <button type="button" class="btn btn-primary" ng-click="addInterest()">Add</button>
+            </div>
+        </div>
+
         <fieldset class="form-group">
             <label for="aboutme">About me</label>
             <textarea class="form-control" id="aboutme" rows="10" columns= "100" ng-model="cv.aboutme"></textarea>
         </fieldset>
+
+
+
 
         <label>References</label>
         <ul>
